# specs/openapi.json
@@ -678,6 +678,86 @@
           }
         }
       }
+    },
+    "/internal/v1/article/{id}/tag/{tagId}/{group}": {
+      "put": {
+        "tags": [
+          "Articles internal methods"
+        ],
+        "operationId": "PutInternalV1ArticleTag",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "guid"
+            },
+            "x-position": 1
+          },
+          {
+            "name": "tagId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 2
+          },
+          {
+            "name": "group",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/GroupTagEnum"
+            },
+            "x-position": 3
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddTagToArticleResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1008,6 +1088,11 @@
             "additionalProperties": false
           }
         ]
+      },
+      "AddTagToArticleResponse": {
+        "type": "object",
+        "description": "Ответ на запрос добавления тега к статье\n            ",
+        "additionalProperties": false
       },
       "DeleteArticleResponse": {
         "type": "object",
