# src/Lowtab.Monster.Service.Api/Endpoints/ArticlesEndpoints.cs
@@ -2,11 +2,13 @@ using System.Net;
 using Lowtab.Monster.Service.Application.Articles.Commands;
 using Lowtab.Monster.Service.Application.Articles.Queryes;
 using Lowtab.Monster.Service.Contracts.Articles;
+using Lowtab.Monster.Service.Contracts.Articles.AddTagToArticle;
 using Lowtab.Monster.Service.Contracts.Articles.CreateArticle;
 using Lowtab.Monster.Service.Contracts.Articles.DeleteArticle;
 using Lowtab.Monster.Service.Contracts.Articles.GetArticle;
 using Lowtab.Monster.Service.Contracts.Articles.GetArticles;
 using Lowtab.Monster.Service.Contracts.Articles.UpdateArticle;
+using Lowtab.Monster.Service.Contracts.GroupTags;
 using Mediator;
 using Microsoft.AspNetCore.Mvc;
 
@@ -26,9 +28,30 @@ internal static class ArticlesEndpoints
         api.MapGet(ArticlesRoutes.GetArticle, GetArticle);
         api.MapGet(ArticlesRoutes.GetArticles, GetArticles);
         api.MapPut(ArticlesRoutes.UpdateArticle, UpdateArticle);
+        api.MapPut(ArticlesRoutes.AddTagToArticle, AddTagToArticle);
         api.MapDelete(ArticlesRoutes.DeleteArticle, DeleteArticle);
 
         return app;
+    }
+
+    [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.BadRequest)]
+    [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.InternalServerError)]
+    [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.NotFound)]
+    [ProducesResponseType(typeof(AddTagToArticleResponse), (int)HttpStatusCode.OK)]
+    private static async Task<AddTagToArticleResponse> AddTagToArticle(
+        [FromRoute] Guid id,
+        [FromRoute] string tagId,
+        [FromRoute] GroupTagEnum group,
+        [FromServices] ISender mediator,
+        CancellationToken ct = default)
+    {
+        var result = await mediator.Send(new AddTagToArticleCommand
+        {
+            ArticleId = id,
+            TagId = tagId,
+            Group = group
+        }, ct);
+        return result;
     }
 
     [ProducesResponseType(typeof(ProblemDetails), (int)HttpStatusCode.BadRequest)]
