# src/Lowtab.Monster.Service.Contracts/Articles/AddTagToArticle/AddTagToArticleResponse.cs
@@ -1,0 +1,6 @@
+namespace Lowtab.Monster.Service.Contracts.Articles.AddTagToArticle;
+
+/// <summary>
+///     Ответ на запрос добавления тега к статье
+/// </summary>
+public record AddTagToArticleResponse;
